--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "production": "NODE_ENV=production; ./node_modules/.bin/gulp production"
   },
   "dependencies": {
-    "babelify": "7.3.0",
+    "@babel/runtime": "7.0.0",
     "bignumber.js": "4.1.0",
     "gulp-sass": "4.0.1",
     "gulp-useref": "3.1.5",
@@ -24,24 +24,26 @@
     "prop-types": "15.6.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-react": "6.24.1",
+    "@babel/core": "7.0.1",
+    "@babel/plugin-transform-runtime": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "babelify": "^10.0.0",
     "browser-sync": "2.23.6",
-    "browserify": "16.0.0",
+    "browserify": "16.2.2",
     "del": "0.1.3",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "14.1.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "3.0.2",
-    "eslint-plugin-react": "6.10.3",
+    "eslint": "5.6.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.1",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.1",
     "gulp-inline-source": "3.1.0",
     "gulp-uglify": "2.1.2",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "run-sequence": "1.2.2",
+    "run-sequence": "2.2.1",
     "vinyl-source-stream": "2.0.0",
     "watchify": "3.11.0"
   },
@@ -68,11 +70,11 @@
             "bower_components"
           ],
           "plugins": [
-            "transform-runtime"
+            "@babel/transform-runtime"
           ],
           "presets": [
-            "env",
-            "react"
+            "@babel/env",
+            "@babel/react"
           ]
         }
       ]
